Fixed Z-index Bugs on table.

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -40,6 +40,14 @@ body {
   gap: 13px;
 }
 
+
+
+
+
+
+
+
+
 /* --------- Info card styles --------- */
 .card-container {
   width: 471px;
@@ -140,6 +148,24 @@ p.text-b {
   }
 }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /* progress card */
 
 .progress-card {
@@ -166,6 +192,17 @@ p.text-b {
   }
 }
 
+
+
+
+
+
+
+
+
+
+
+
 /* progress bar */
 
 .progress-bar {
@@ -183,6 +220,11 @@ p.text-b {
   background-color: $green-color;
   border-radius: 2px;
 }
+
+
+
+
+
 
 /* estimation container  */
 .estimation-container {
@@ -206,6 +248,11 @@ p.text-b {
 .estimation-row:last-child {
   margin-bottom: 0;
 }
+
+
+
+
+
 
 
 /* tables */
@@ -248,3 +295,341 @@ p.text-b {
 }
 
 
+
+
+
+
+
+
+.papa {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  overflow-y: scroll;
+  height: 309px;
+}
+
+.izquierda {
+  display: grid;
+  gap: 3px;
+  position: relative;
+}
+
+.header-izq, .row-izq {
+  display: grid;
+  grid-template-columns: 27px 100px 100px 100px;
+  gap: 2px;
+  background-color: rgb(250, 250, 250);
+  padding: 9px 6px;
+  min-height: 30px;
+
+  & > div {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.header-izq {
+  position: sticky;
+  top: 0;
+  background-color: rgb(245, 245, 245);
+  z-index: 5;
+}
+
+// -- DERECHA --
+
+.derecha {
+  display: grid;
+  gap: 3px;
+  position: relative;
+  overflow-x: scroll;
+  overflow-y: hidden;
+}
+
+.header-der, .row-der {
+  display: grid;
+  grid-template-columns: repeat(6, 135px);
+  gap: 2px;
+  background-color:rgb(250, 250, 250);
+  padding: 9px 6px;
+  min-height: 30px;
+
+  & > div {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+.header-der {
+  position: sticky;
+  top: 0;
+  left: 0;
+  grid-row: 1;
+  background-color: rgb(245, 245, 245);
+}
+
+
+
+
+
+
+
+
+// -------------------------------------------------
+// ------------------ STIKY TABLE ------------------
+// -------------------------------------------------
+
+
+// .sticky-table {
+//   height: 306px;
+//   overflow-x: scroll;
+//   overflow-y: scroll;
+//   position: relative;
+// }
+
+// table {
+//   border-collapse: collapse;
+//   background: rgb(243, 243, 243);
+
+// }
+
+// thead {
+//   position: sticky;
+//   left: 0;
+//   top: 0;
+//   background: burlywood;
+  
+//   th {
+//     position: sticky;
+//     top: 0;
+//     left: 0;
+    
+//     &:first-child {
+//       padding: 0 15px;
+//     }
+
+//     &:nth-child(-n+2) {
+//       z-index: 30 !important;
+//       background: cornsilk;
+//     }
+//   }
+// }
+
+// th, td {
+//   padding: 0px 30px;
+//   height: 45px;
+//   width: 40px;
+//   text-align: center;
+//   justify-content: center;
+// }
+
+// th, td {
+//   &:nth-child(-n+2) {
+//     position: -webkit-sticky; // for safari
+//     position: sticky;
+//     left: 0px;
+//     z-index: 2;
+//   }
+// }
+
+// tr {
+//   & > td:first-child {
+//     background: yellow;
+//     padding: 0 15px;
+//     width: 15px;
+//   }
+// }
+
+// th:first-child, td:first-child {
+//   background: tomato !important;
+//   left: 0;
+// }
+
+// th:nth-child(2), td:nth-child(2) {
+//   background: teal !important;
+//   position: sticky;
+//   left: 46px;
+// }
+
+
+// th {
+//   background: black;
+//   color: white;
+//   white-space: nowrap;
+// }
+
+// tr {
+//   background: hsl(0, 0%, 20%);
+  
+//   &:nth-child(even) {
+//     background: hsl(0, 0%, 15%);
+//   }
+  
+//   &:not(:last-of-type) {
+//     border-bottom: 2px solid rgba(yellow, 0.25);
+//   }
+// }
+
+
+    // top: 0px; -> doesn't work in Safari 11
+    /*
+      thanks to https://github.com/jonjohnjohnson
+      explanation: https://github.com/w3c/csswg-drafts/issues/865 
+    */
+  
+// td:first-child {
+//   tr:nth-child(odd) & {
+//     background: hsl(0, 0%, 20%);
+//     box-shadow: inset -2px 0px rgba(black, 0.25);
+//   }
+
+//   tr:nth-child(even) & {
+//     background: hsl(0, 0%, 15%);
+//     box-shadow: inset -2px 0px rgba(black, 0.25);
+//   }
+// }
+
+// * {
+//   box-sizing: border-box;
+// }
+
+.sticky-table {
+  height: 306px;
+  // max-width: 100vw;
+  overflow-x: auto;
+  overflow-y: auto;
+  position: relative;
+}
+
+table {
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+
+thead {
+  box-shadow: 0px 3px 6px #00000029;
+  // thead and tr don't currently support sticky
+  // position: -webkit-sticky;
+  // position: sticky;
+  // left: 0; top: 0;
+  
+  th {
+    position: -webkit-sticky; // for safari
+    position: sticky;
+    top: 0;
+    left: 0;
+    
+    
+    &:nth-child(-n+4)  {
+      z-index: 80;
+    }
+
+
+  }
+}
+
+th, td {
+  padding: 5px 5px;
+
+  &:not(:first-child) {
+    min-width: 127px;
+  }
+
+  &:nth-child(-n+4) {
+    padding: 5px;
+    text-align: center;
+    justify-content: center;
+    z-index: 10;
+  } 
+}
+
+
+th {
+  background: #EFF3FD;
+  color: #6A6A6A;
+  white-space: nowrap;
+  padding: 3px;
+}
+
+
+
+tr {
+  background-color: white;
+  height: 29px;
+  color: #838383;
+  white-space: nowrap;
+  
+  // Colored Rows 
+  // &:nth-child(even) {
+  //   background-color: hsl(0, 0%, 98%);
+  // }
+
+
+}
+
+
+// Columns - Select by Index
+th, td {
+  // width: 100px !important;
+
+  &:first-child {
+    position: -webkit-sticky; // for safari
+    position: sticky;
+    z-index: 20;
+    left: 0px;
+    width: 300px !important;
+    // background-color: slateblue;
+  }
+  &:nth-child(2) {
+    left: 26px;
+    position: sticky;
+    z-index: 20;
+    // background-color: skyblue;
+  }
+  &:nth-child(3) {
+    position: sticky;
+    z-index: 20;
+    left: 115px;
+    // background-color: sienna;
+  }
+  &:nth-child(4) {
+    position: sticky;
+    z-index: 20;
+    left: 169px;
+    // background-color: sandybrown;
+  }
+}
+
+td {
+  &:nth-child(-n+4){
+  background-color: white;
+  }
+}
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+::-webkit-scrollbar-track-piece  {
+  background-color: #C2D2E4;
+  border-radius: 3px;
+  position: absolute;
+  right: 0;
+  width: 400px;
+}
+
+::-webkit-scrollbar-thumb:horizontal {
+  width: 40px;
+  background-color: #0A4C95;
+  border-radius: 3px;
+}
+
+::-webkit-scrollbar-thumb:vertical {
+  height: 40px;
+  background-color: #0A4C95;
+  border-radius: 3px;
+}
